--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
     <header>
-        <h1>"Minha Lista de Tarefas"</h1> 
+        <h1>Minha Lista de Tarefas</h1> 
     </header>
     <section>
         <h3 id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</h3>
-        <input type="text" id="texto-tarefa" name="texto" placeholder="Texto"></input>
+        <input type="text" id="texto-tarefa" placeholder="Texto"></input>
+        <button onclick = 'adiciona()' id="criar-tarefa">Adiciona Tarefa</button>
     </section>
     <section >
         <ol id="lista-tarefas"></ol> 
     </section>
-
+   
 <script src="script.js"></script>   
 </body>
 </html>
