--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h3 id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</h3>
         <input type="text" id="texto-tarefa" placeholder="Texto"></input>
         <button onclick = 'adiciona()' id="criar-tarefa">Adiciona Tarefa</button>
+        <button id="apaga-tudo"> Apaga Tudo </button>
     </section>
     <section >
         <ol id="lista-tarefas"></ol> 
