--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <input type="text" id="texto-tarefa" placeholder="Texto"></input>
         <button onclick = 'adiciona()' id="criar-tarefa">Adiciona Tarefa</button>
         <button id="apaga-tudo"> Apaga Tudo </button>
+        <button id="remover-finalizados"> Remove Finalizados</button>
     </section>
     <section >
         <ol id="lista-tarefas"></ol> 
