--- a/index.html
+++ b/index.html
@@ -3,25 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" >
     <title>Projeto Lista de Tarefas</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="container">
     <header>
         <h1>Minha Lista de Tarefas</h1> 
     </header>
+    
     <section>
         <h3 id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</h3>
-        <input type="text" id="texto-tarefa" placeholder="Texto"></input>
+        <input type="text" id="texto-tarefa" placeholder="Tarefa"></input>
         <button onclick = 'adiciona()' id="criar-tarefa">Adiciona Tarefa</button>
-        <button id="apaga-tudo"> Apaga Tudo </button>
         <button id="remover-finalizados"> Remove Finalizados</button>
+        <button id="apaga-tudo"> Apaga Tudo </button>
     </section>
     <section >
         <ol id="lista-tarefas"></ol> 
     </section>
-   
+</div>
 <script src="script.js"></script>   
 </body>
+<footer id="rodape">
+    <a id="link" href="https://github.com/GustavoAnatnas/trybe-exercicios-" target="_blank"> 
+        <img src="./gitLogo.png" id="logo" alt="Logo Git" width="50px">
+    </a>
+</footer> 
 </html>
