Adicona gif e fixa possiveis erros

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <ol id="lista-tarefas"></ol> 
     </section>
 </div>
+<div>
+    <img src="./bob.gif" id="gif" alt="Gif Bob Esponja">
+</div>
 <script src="script.js"></script>   
 </body>
 <footer id="rodape">
